# Velocity

./: .gitattributes  .gitignore  AGENTS-v0.md  AGENTS-v1.md  Cargo.toml  README.md
baselines/langgraph_baseline/: agent.py  requirements.txt  tools.py
baselines/raw_mcp_baseline/: server.py
baselines/raw_mcp_baseline_capped/: server.py  test_semaphore.py
crates/velocity-bench/: Cargo.toml
crates/velocity-bench/src/: load_gen.rs  main.rs  pool_sweep.rs  report.rs  task_definitions.rs
crates/velocity-core/: Cargo.toml
crates/velocity-core/src/: lib.rs  scheduler.rs  transport.rs  worker_pool.rs
crates/velocity-protocol/: Cargo.toml
crates/velocity-protocol/benches/: codec_bench.rs
crates/velocity-protocol/src/: codec.rs  lib.rs  messages.rs
crates/velocity-tools/: Cargo.toml
crates/velocity-tools/src/: lib.rs  mock_calc_engine.rs  mock_db.rs  mock_file.rs  mock_http.rs  mock_memory_lookup.rs  mock_state_write.rs
results/: report.md
scripts/: generate_graphs.py  run_all_benchmarks.sh
