[package]
name = "velocity-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Benchmark harness and load generator for the Velocity runtime"

[dependencies]
velocity-protocol = { path = "../velocity-protocol" }
velocity-core = { path = "../velocity-core" }
velocity-tools = { path = "../velocity-tools" }
tokio = { version = "1", features = ["full"] }
hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
