[package]
name = "velocity-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mock tool executors for the Velocity runtime benchmarks"

[dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
rand = "0.8"
